@@ -4,10 +4,12 @@ Version 0.10 "Antigua" -- Subversion
 * Added dropdown of encodings to add/edit template pages
 * Added multiple content blocks
 * Added recursive html blobs
-* Submitting site prefernces redircts to an empty page now
+* Changed installer to use regular Submit buttons...  now works in
+Konqueror
 * Fixed bug with image path generation in TinyMCE
 * Fixed bug with text parameter in print plugin
 * Fixed bug with inactive pages still being accessible by page id
+* Submitting site prefernces redircts to an empty page now
 * Updated ADODB to 4.61
 
 Version 0.9.2 "Hatutu" -- Fri Feb 25 2005
